[package]
name = "tracelite"
version = "0.1.5"
edition = "2021"
description = "An alternative to the tracing crate which is specialized for OpenTelemetry traces"
license = "MIT"
repository = "https://github.com/Schmidt-Embedded-Systems-GmbH/tracelite"

# [features]
# default = ["enable", "reqwest", "log", "opentelemetry-micropb"]
# enable = []

[dependencies]
tracelite_macro = { workspace = true }
erased-serde = "0.4" 
serde = "1" 
fastrand = "2.2" # TODO get rid of this?

# TODO axe unused feature (rt-multi-thread only used for examples)
tokio = { version = "1.41", features = ["sync", "rt", "time", "macros", "net", "rt-multi-thread"] }
# TODO is this still used
futures = "0.3"
# log = { version = "0.4", features=["kv_std", "kv_serde"] }
micropb = "0.1"
opentelemetry-micropb = { version = "0.1.1" }
h2 = "0.4"
http = "1.1"
bytes = "1"